# jax_bhm

./: LICENSE  README.md  examples.py  particle_system.py  pyproject.toml  setup.py  test_particle_system.py
doc/hierarchical_bayesian_modeling/: bhm_notes_smc.tex
doc/sequential_smc_explanation/: smc_sequential.tex
examples/: README.md  basic_sampling.py  examples.py  run_basic_simulation.py  run_diagnostics_rmh.py  run_em_sampling.py  run_parallel_rmh.py  run_rmh_sampling.py  run_rmh_with_sigmas.py  run_smc_simulation.py  run_smc_simulation_with_timing.py  simple_sampling.py
imp_testing/basic/: does_jax_work.py
imp_testing/intermediate_timings/: generate_syn_xlms_data.py  plot_results.py  smc_xlms_sampling.py  xlms_timings.py
io_utils/: io_handlers.py  rmf3_converter.py
jax_bhm/: __init__.py  sampling.py  scoring.py  structure.py
representation/: __init__.py  particle_system.py  simulate_density.py
sampling/: __init__.py  mcmc.py  rmh.py  smc.py
scoring/: em_score.py  energy.py  log_priors.py
tests/: __init__.py  test_em_score.py  test_pair_score.py  test_sampling.py  test_scoring.py  test_structure.py
