[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jax_bhm"
version = "0.1.0"
description = "Protein structure sampling with BlackJax and JAX-based Bayesian inference"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "sreeganb"}
]
dependencies = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "blackjax>=1.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "matplotlib>=3.7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["jax_bhm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
